--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,7 @@ p{
     text-align: center;
 }
 
-.pie {
-    color: rgb(255, 255, 255);
-    font-size: 1rem;.
-    text-align: center;
-}
+
 
 nav{
     background-color: rgba(255, 234, 1, 0.896);
@@ -51,6 +47,13 @@ nav{
     width: 100%;
 	padding: 5px 0px;
     z-index: 1;
+    animation-name: mianimacion;
+    animation-duration: 2s;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
     }
     nav ul{
         list-style: none;
@@ -67,6 +70,10 @@ nav{
                 text-decoration: none;
                 font-family: 'Figtree', sans-serif;
                 font-size: 1.2rem;
+                background: linear-gradient( to top, rgb(255, 255, 255), rgb(197, 197, 16)  );
+                border: none;
+                border-radius: 4px;
+                text-align: right;
             }
 
            nav ul li a:hover{
@@ -108,7 +115,8 @@ footer{
 	margin: 20px;
 	display: flex;
 	justify-content: space-between;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+    animation-name: ; 
 }
     #camisetasnac. galeria figure{
         text-align: center;
@@ -286,4 +294,8 @@ footer{
 
 }
 
+@keyframes mianimacion {
+    0% {background: #1215e6;}
+    100% {background: #fff200;}
+}
                  
