--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,10 @@
 // imports partials
-@import  "_commons"
-@import  "_fonts"
-@import  "_navbar"
-@import  "_content"
-@import  "_footer"
+@import  "_commons";
+@import "_variables";
+@import "_mixins";
+@import  "_fonts";
+@import  "_navbar";
+@import  "_content";
+@import  "_footer";
 
 
